# VolAI

./: .gitignore  PROMPT.md  README.md  pyproject.toml
src/volai/: __main__.py  cli.py  config.py
src/volai/analysis/: chat.py  diff.py  grounding.py  mitre_data.py  timeline.py  triage.py
src/volai/llm/: __init__.py  base.py  claude.py  local.py  openai.py
src/volai/prompts/: system.py  templates.py
src/volai/report/: models.py
src/volai/rules/: __init__.py  behavioral.py  models.py
src/volai/storage/: __init__.py  database.py  store.py
src/volai/volatility/: formatter.py  plugins.py  runner.py
tests/: demo_e2e.py  demo_e2e_features.py  demo_ollama.py  fake_llm_server.py  test_behavioral_rules.py  test_chat.py  test_cli.py  test_config.py  test_diff.py  test_e2e.py  test_formatter.py  test_grounding.py  test_llm.py  test_plugins.py  test_prompts.py  test_report_models.py  test_runner.py  test_storage.py  test_timeline.py  test_triage.py
