[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "volai"
version = "0.2.0"
description = "AI-powered memory forensics companion for Volatility3"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["forensics", "memory", "volatility", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: Security",
]

dependencies = [
    "click>=8.1",
    "volatility3>=2.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
volai = "volai.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/volai"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
